<resources>
    <string name="app_name">Nanopool monitoring (no ads)</string>
    <string name="accounts">ACCOUNTS</string>
    <string name="skip">SKIP</string>
    <string name="add_account">Configure account</string>
    <string name="select_your_coin">Select your coin</string>
    <string name="your_wallet_address">your wallet address</string>
    <string name="add">ADD</string>
    <string name="n_a">N/A</string>
    <string name="coin_name">COIN_NAME</string>
    <string name="pool_hashrate">Pool Hashrate:</string>
    <string name="miners_count">Miners Count:</string>
    <string name="price">Coin Price:</string>
    <string name="current_hashrate">Current Hashrate:</string>
    <string name="balance">Balance:</string>
    <string name="average_hashrate_for_last_6_hours">Average Hashrate for last 6 hours:</string>
    <string name="average_hashrate_for_last_24_hours">Average Hashrate for last 24 hours:</string>
    <string name="very_approximated_earnings">Very approximated earnings:</string>
    <string name="period">Period:</string>
    <string name="coins">Coins</string>
    <string name="btc">BTC</string>
    <string name="usd">USD</string>
    <string name="minute">Minute:</string>
    <string name="hour">Hour:</string>
    <string name="day">Day:</string>
    <string name="week">Week:</string>
    <string name="month">Month:</string>
    <string name="please_add">Accounts not found, please try to add some...</string>
    <string name="default_wallet_text">Your wallet</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="updating">Updating...</string>
    <string name="hashrate">Hashrate:</string>
    <string name="status">Status:</string>
    <string name="loading_coin">Loading coin...</string>
    <string name="workers">Workers:</string>
    <string name="balance1">Balance:</string>
    <string name="news_key">6bb2d102680be65b5d540eb15eb2c58a</string>
    <string name="modify_account">modify account</string>
    <string name="pool_fee">Pool Fee</string>
    <string name="payout_scheme">Payout Scheme</string>
    <string name="block_validation_time">Block Validation Time</string>
    <string name="default_payout_limit">Default Payout Limit</string>
    <string name="general_info">General info</string>
    <string name="original_authors">Original authors</string>
    <string name="initial_release">Initial release</string>
    <string name="written_in">Written in</string>
    <string name="website">Website</string>
    <string name="modify">modify</string>
    <string name="cancel">Cancel</string>
    <string name="look_for_worker">Look for worker...</string>
    <string name="updatingPoolInfo">updating...</string>
    <string name="twentyFourHours">24H</string>
    <string name="paymentsnotfound">Payments not found...</string>

</resources>
