<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/nanopool_background">
    <TextView
            android:id="@+id/coin_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/coin_name"
            android:background="@color/grey_background"
    />
    <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="50dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
>

        <TextView
                android:background="@drawable/squared_thin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pool_hashrate"
                android:layout_weight="1"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginRight="1dp"
        />
        <TextView
                android:gravity="center"
                android:background="@drawable/squared_thin"
                android:id="@+id/hashrate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="N/A"
                android:layout_weight="1"
        />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="5dp"
    >

        <TextView
                android:gravity="center"
                android:background="@drawable/squared_thin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/miners_count"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_marginRight="1dp"
        />
        <TextView
                android:gravity="center"
                android:background="@drawable/squared_thin"
                android:id="@+id/miners"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/n_a"
                android:layout_weight="1"
        />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="5dp">


        <TextView
                android:gravity="center"
                android:background="@drawable/squared_thin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/price"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_marginRight="1dp"
        />
        <TextView
                android:gravity="center"
                android:background="@drawable/squared_thin"
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/n_a"
                android:layout_weight="1"
        />

    </LinearLayout>
</LinearLayout>