<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"

        android:layout_height="match_parent">

    <ImageView android:layout_width="match_parent"
               android:background="@color/white"
               android:layout_height="match_parent"/>

    <ImageView android:layout_width="300dp"
               android:scaleType="centerCrop"
               android:src="@drawable/add_background"
               android:layout_height="300dp"
               android:id="@+id/imageView3"
               android:layout_marginBottom="8dp"
               app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
               app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
               app:layout_constraintTop_toTopOf="@+id/textView2" android:layout_marginStart="8dp"
               app:layout_constraintStart_toStartOf="@+id/scrollView2" app:layout_constraintHorizontal_bias="0.597"
               app:layout_constraintVertical_bias="0.0"/>

    <ImageView
            android:id="@+id/addAccCoinLogo"
            android:layout_width="60dp"
            android:layout_height="60dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>


    <TextView
            android:layout_width="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/add_account"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintStart_toEndOf="@+id/addAccCoinLogo"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.519" android:id="@+id/textView2"/>

    <TextView
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/select_your_coin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            tools:layout_editor_absoluteX="0dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            android:id="@+id/textView3"/>
    <Spinner
            style="@style/AppTheme"
            android:id="@+id/coinSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:spinnerMode="dialog"
            tools:layout_editor_absoluteX="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

    </Spinner>

    <ScrollView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:id="@+id/scrollView2"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/coinSpinner"
    >
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

            <EditText
                    android:gravity="bottom|center"
                    android:hint="@string/your_wallet_address"
                    android:id="@+id/addAccountEditText"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
            />

            <Button
                    android:background="@drawable/round"
                    android:text="@string/add"
                    android:layout_gravity="center"
                    android:id="@+id/addAccountButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
            />


        </TableLayout>


    </ScrollView>

</android.support.constraint.ConstraintLayout>