<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"

        android:layout_height="match_parent">

    <ImageView android:layout_width="match_parent"
               android:background="@color/white"
               android:layout_height="match_parent"/>


    <ImageView
            android:id="@+id/addAccCoinLogo"
            android:layout_width="60dp"
            android:layout_height="60dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>


    <TextView
            android:layout_width="wrap_content"
            android:layout_margin="8dp"
            android:text="Modify account"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_height="60dp"
            android:textStyle="bold|italic"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintStart_toEndOf="@+id/addAccCoinLogo"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.519" android:id="@+id/textView2"/>

    <Button
            android:drawableRight="@drawable/dropdownlisticoin"
            android:drawableLeft="@drawable/coinslist"
            android:background="@drawable/rounded"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="Select coin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            tools:layout_editor_absoluteX="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:id="@+id/selectCoinButton"/>
    <TextView
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"
            android:focusable="false"
            android:textStyle="italic"
            android:text="Selected coin: Ethereum"
            android:id="@+id/coinName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/selectCoinButton"/>


    <ScrollView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:id="@+id/scrollView2"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/coinName">
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

            <EditText
                    android:gravity="bottom|center"
                    android:hint="@string/your_wallet_address"
                    android:id="@+id/modifyAccountEditText"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
            />

            <Button
                    android:background="@drawable/round"
                    android:text="@string/modify_account"
                    android:layout_gravity="center"
                    android:id="@+id/modifyButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />

            <Button
                    android:background="@drawable/cancel_button"
                    android:text="@string/cancel"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:id="@+id/cancelButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
            />

        </TableLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>